# pycalceff

./: .gitignore  .pre-commit-config.yaml  CONDA_FORGE_INSTRUCTIONS.md  CONDA_FORGE_SETUP.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  environment-dev.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
conda.recipe/: README.md  meta.yaml
docs/: conf.py  index.rst
scripts/: generate.py  profile_script.py  test-conda-install.sh  test-conda-install.sh.disabled
src/pycalceff/: __init__.py
src/pycalceff/cli/: commands.py
src/pycalceff/core/: cli_utils.py  effic.py
src/pycalceff/data/: example_data.txt
tests/: conftest.py  test_basic.py
tests/cli/: test_commands.py
tests/core/: test_cli_utils.py  test_effic.py  test_solution_properties.py
